Usable and stable version 1